feat(call): fix errors follow instruction of gemini on github